--- a/server/config.env
+++ b/server/config.env
@@ -1,4 +1,4 @@
-CONN_STR=mongodb+srv://admin:tDUXvKFZGhBZNzNc@cluster0.f8yt3.mongodb.net/chat_app
-LOCAL_CONN_STR=mongodb://localhost:27017/chat_app
+Conn_Str=mongodb+srv://admin:tDUXvKFZGhBZNzNc@cluster0.f8yt3.mongodb.net/chat_app
+Local_Conn_Str=mongodb://localhost:27017/chat_app
 PORT=5000
 Secret_Key=my_super_secret_key_always
