--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
         "react-router-dom": "^7.3.0",
         "react-scripts": "5.0.1",
         "redux": "^5.0.1",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "socket.io-client": "^4.8.1"
     },
     "scripts": {
         "start": "react-scripts start",
