--- a/client/package.json
+++ b/client/package.json
@@ -3,22 +3,25 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@reduxjs/toolkit": "^2.6.1",
-        "@testing-library/dom": "^10.4.0",
-        "@testing-library/jest-dom": "^6.6.3",
-        "@testing-library/react": "^16.2.0",
-        "@testing-library/user-event": "^13.5.0",
-        "axios": "^1.8.3",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-hot-toast": "^2.5.2",
-        "react-redux": "^9.2.0",
-        "react-router-dom": "^7.3.0",
-        "react-scripts": "5.0.1",
-        "redux": "^5.0.1",
-        "web-vitals": "^2.1.4",
-        "socket.io-client": "^4.8.1"
-    },
+    "@reduxjs/toolkit": "^2.8.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
+    "emoji-picker-react": "^4.12.2",
+    "moment": "^2.30.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.0",
+    "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "socket.io-client": "^4.8.1",
+    "web-vitals": "^2.1.4"
+  },
+    
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
